--- a/content/_assets/images/tables/table-3-1.html
+++ b/content/_assets/images/tables/table-3-1.html
@@ -6,75 +6,75 @@
 <thead>
   <tr>
    <th></th>
-   <th>Mehra 1972*</th>
+   <th>*</th>
    <th>Hacke 1979<sup>†</sup></th>
   </tr>
 </thead>
 <tbody>
  <tr>
  <td><strong>1</strong></td>
- <td>Whatever the nature of the materials used, they should remain fully reversible with regard to additional relining eventually needed in the future</td>
+ <td>Whatever the nature of the materials used, they should remain fully reversible with regard to additional relining eventually needed in the future.</td>
  <td>Optimal reversibility of the materials introduced (or added)</td>
  </tr>
 
  <tr>
  <td><strong>2</strong></td>
- <td>Relining may not in anyway cause alterations in the structural character of a painting</td>
- <td>As far as possible a material-identity between the natural materials in the original painting and the materials used in the conservation (process)</td>
+ <td>Relining may not in any way cause alterations in the structural character of a painting.</td>
+ <td>As far as possible a material identity between the natural materials in the original painting and the materials used in the conservation (process).</td>
  </tr>
 
  <tr>
  <td><strong>3</strong></td>
- <td>The materials used should have passed selection in direct reference to the specific problems of the paintings involved</td>
- <td>Introduced materials should not cause optical changes in the painting structure</td>
+ <td>The materials used should have passed selection in direct reference to the specific problems of the paintings involved.</td>
+ <td>Introduced materials should not cause optical changes in the painting structure.</td>
  </tr>
 
  <tr>
  <td><strong>4</strong></td>
- <td>Flexibility must be guaranteed for an unlimited period of time</td>
- <td>Materials used should not affect/change the mechanical/physical characteristics of the original materials (expansion coefficient, stress, etc.)</td>
+ <td>Flexibility must be guaranteed for an unlimited period of time.</td>
+ <td>Materials used should not affect/change the mechanical/physical characteristics of the original materials (expansion coefficient, stress, etc.).</td>
  </tr>
 
  <tr>
  <td><strong>5</strong></td>
- <td>The use of heat should be avoided altogether or must be considerably minimized</td>
- <td>A neutral chemical stability is to be endeavoured</td>
+ <td>The use of heat should be avoided altogether or must be considerably minimized.</td>
+ <td>A neutral chemical stability is to be endeavored.</td>
  </tr>
 
  <tr>
  <td><strong>6</strong></td>
- <td>Increase of weight as a result of relining should be minimal</td>
- <td>Materials used should have long term durability</td>
+ <td>Increase of weight as a result of relining should be minimal.</td>
+ <td>Materials used should have long-term durability.</td>
  </tr>
 
  <tr>
  <td><strong>7</strong></td>
- <td>The adhesive selected should not be allowed to penetrate the canvas, ground or paint-film alike. Instead, it should form only a film between old and new canvases</td>
- <td>Individual processes (and materials used for these individual processes) should be kept separate</td>
+ <td>The adhesive selected should not be allowed to penetrate the canvas, ground, or paint-film alike. Instead, it should form only a film between old and new canvases.</td>
+ <td>Individual processes (and materials used for these individual processes) should be kept separate.</td>
  </tr>
 
  <tr>
  <td><strong>8</strong></td>
- <td>It must be optional to use the selected adhesive in different degrees of cohesive strength and it is imperative that it will have proper resistance to fluctuations in temperature and humidity. It should be compatible with the other materials used for the relining which it serves.</td>
- <td>Water/humidity, raised heat and pressure should be kept at a minimum</td>
+ <td>It must be optional to use the selected adhesive in different degrees of cohesive strength, and it is imperative that it will have proper resistance to fluctuations in temperature and humidity. It should be compatible with the other materials used for the relining which it serves.</td>
+ <td>Water/humidity, raised heat, and pressure should be kept at a minimum.</td>
  </tr>
 
  <tr>
  <td><strong>9</strong></td>
  <td> </td>
- <td>Increase of weight as a result of the conservation treatment should be minimal</td>
+ <td>Increase of weight as a result of the conservation treatment should be minimal./td>
  </tr>
 
  <tr>
  <td><strong>10</strong></td>
  <td> </td>
- <td>Optimal preservation is aimed for of the original structure, such as varnish, paint layers, ground, original canvas, and stretcher / strainer</td>
+ <td>Optimal preservation of the original structure is aimed for, such as varnish, paint layers, ground, original canvas, and stretcher / strainer.</td>
  </tr>
 
  <tr>
  <td><strong>11</strong></td>
  <td> </td>
- <td>The cultural history of secondary additions should be recognized, including additional varnish, retouches, lining canvas, and stretcher. Such materials or items should only be removed or replaced in case they deteriorate or change the original structure or the appearance. If need be removed, they ought be registered and preferably kept elsewhere.</td>
+ <td>The cultural history of secondary additions should be recognized, including additional varnish, retouches, lining canvas, and stretcher. Such materials or items should only be removed or replaced in case they deteriorate or change the original structure or the appearance. If need be removed, they ought to be registered and preferably kept elsewhere.</td>
  </tr>
 
  </tbody>
@@ -82,6 +82,6 @@
 
 <div class="table-key">
   <p>Sources:</p>
-  <p>* {Scharff 1980|, 1: 23}</p>
-  <p><sup>†</sup> Compiled by students based on {Hacke 1976}, {Hacke 1978}, and the 1979 seminar given by Hacke. (Translated from Danish by the author.)</p>
+  <p>* Scharff 1980, 1: 23.</p>
+  <p><sup>†</sup> Compiled by students based on Hacke 1976, Hacke 1978, and the 1979 seminar given by Hacke. (Translated from Danish by the author.)</p>
 </div>
