--- a/content/_assets/images/tables/table-3-2.html
+++ b/content/_assets/images/tables/table-3-2.html
@@ -18,5 +18,5 @@
  </tbody>
 </table>
 <div class="table-key">
-  <p>Source: {Scharff 1980|, 1:23}.</p>
+  <p>Source: Scharff 1980, 1:23.</p>
 </div>
