--- a/content/_assets/images/tables/table-4-1.html
+++ b/content/_assets/images/tables/table-4-1.html
@@ -18,11 +18,11 @@
  <td>P.1932.SC.322</td>
  <td>The Courtauld Gallery, Samuel Courtauld Bequest</td>
  <td>1969</td>
- <td>Marouflaged onto aluminium using wax-resin (90% beeswax, 10% AW2 resin)</td>
+ <td>Marouflaged onto aluminium using wax resin (90% beeswax, 10% AW2 resin)</td>
  </tr>
 
  <tr>
- <td><em>Samson Sharing Honey</em>, After Guercino, 17th century</td>
+ <td><em>Samson Sharing Honey</em>, after Guercino, 17th century</td>
  <td>Not accessioned</td>
  <td>Department of Conservation and Technology</td>
  <td>1976</td>
@@ -34,11 +34,11 @@
  <td>P.1978.PG.61</td>
  <td>The Courtauld Gallery, Princes Gate Bequest</td>
  <td>1980</td>
- <td>Lined with Primal AC634 + 2% Natrosol onto Permawear 122</td>
+ <td>Lined with Primal AC-634 + 2% Natrosol onto Permawear 122</td>
  </tr>
 
  <tr>
- <td><em>Au Bal—Marguerite de Conflans en Toilette de Bal</em>, Edouard Manet, 1870-80</td>
+ <td><em>Au Bal—Marguerite de Conflans en Toilette de Bal</em>, Edouard Manet, 1870–80</td>
  <td>P.1978.PG.233</td>
  <td>The Courtauld Gallery, Princes Gate Bequest</td>
  <td>1981</td>
@@ -50,7 +50,7 @@
  <td>P.1978.PG.87</td>
  <td rowspan="2">The Courtauld Gallery, Princes Gate Bequest</td>
  <td>1981</td>
- <td>Strip lined with Beva 371 and Permawear 122</td>
+ <td>Strip-lined with Beva 371 and Permawear 122</td>
  </tr>
 
  <tr>
@@ -64,19 +64,19 @@
  <td>P.1935.RF.140</td>
  <td>The Courtauld Gallery, Roger Fry Bequest</td>
  <td>After 1985</td>
- <td>Strip lined with Beva 371</td>
+ <td>Strip-lined with Beva 371</td>
  </tr>
 
  <tr>
- <td><em>The Virgin and Child with St. Elizabeth and St. John the Baptist,</em> Giovanni Battista Salvi (Il Sassoferrato), ca.1660</td>
+ <td><em>The Virgin and Child with St. Elizabeth and St. John the Baptist</em>, Giovanni Battista Salvi (Il Sassoferrato), ca. 1660</td>
  <td>P.1947.LF.389</td>
  <td>The Courtauld Gallery, Lee of Fareham Bequest</td>
  <td>Early 1990s</td>
- <td>Strip lined with Beva film and sailcloth</td>
+ <td>Strip-lined with Beva film and sailcloth</td>
  </tr>
 
  <tr>
- <td rowspan="2"><em>The Siege of Malta: Siege and Bombardment of St Michael, 28 June 1565,</em> Matteo Perez, ca. 1656</td>
+ <td rowspan="2"><em>The Siege of Malta: Siege and Bombardment of St Michael, 28 June 1565</em>, Matteo Perez d‘Aleccio, ca. 1656</td>
  <td rowspan="2">BHC0255</td>
  <td rowspan="2">Royal Museums Greenwich, National Maritime Museum Collection</td>
  <td>1967</td>
@@ -89,7 +89,7 @@
  </tr>
 
  <tr>
- <td><em>Cleopatra's Needle Being Brought to England, 1877,</em> George Knight, ca.1877</td>
+ <td><em>Cleopatra's Needle Being Brought to England, 1877</em>, George Knight, ca. 1877</td>
  <td>BHC0641</td>
  <td>Royal Museums Greenwich, National Maritime Museum Collection</td>
  <td>1971</td>
@@ -97,7 +97,7 @@
  </tr>
 
  <tr>
- <td><em>Defeat of the Spanish Armada, 8 August 1588,</em> Philippe Jacques de Loutherbourg, 1796</td>
+ <td><em>Defeat of the Spanish Armada, 8 August 1588</em>, Philippe-Jacques de Loutherbourg, 1796</td>
  <td>BHC0264</td>
  <td>Royal Museums Greenwich, National Maritime Museum Collection</td>
  <td>1973</td>
@@ -105,7 +105,7 @@
  </tr>
 
  <tr>
- <td>HMS 'Dido'<em>, '</em>Ajax' <em>and </em>'Orion' <em>in Action off Crete, 21 May 1941</em> Rowland Langmaid (1897–1956), mid-20th century</td>
+ <td><em>HMS</em>Dido, Ajax <em>and </em>Orion <em>in Action off Crete, 21 May 1941</em> Rowland Langmaid, mid-20th century</td>
  <td>BHC0678</td>
  <td>Royal Museums Greenwich, National Maritime Museum Collection</td>
  <td>1973</td>
@@ -113,19 +113,19 @@
  </tr>
 
  <tr>
- <td><em>Destruction of the American Fleet at Penobscot Bay, 14 August 1779,</em> Dominic Serres, late 18th century</td>
+ <td><em>Destruction of the American Fleet at Penobscot Bay, 14 August 1779</em>, Dominic Serres, late 18th century</td>
  <td>BHC0425</td>
  <td>Royal Museums Greenwich, National Maritime Museum Collection</td>
  <td>1974</td>
- <td>Lined with wax-resin onto cotton duck and Melinex</td>
+ <td>Lined with wax resin onto cotton duck and Melinex</td>
  </tr>
 
  <tr>
- <td><em>The East Indiaman </em>York<em> and Other Vessels, </em>Thomas Luny, 1788</td>
+ <td><em>The East Indiaman </em>York<em> and Other Vessels</em>, Thomas Luny, 1788</td>
  <td>BHC3735</td>
  <td>Royal Museums Greenwich, National Maritime Museum Collection</td>
  <td>1974</td>
- <td>Lined with wax-resin onto post office bagging</td>
+ <td>Lined with wax resin onto post office bagging</td>
  </tr>
 
  <tr>
@@ -133,7 +133,7 @@
  <td>BHC3209</td>
  <td>Royal Museums Greenwich, National Maritime Museum Collection</td>
  <td>1979</td>
- <td>Strip lined with Beva 371 onto <a name="_Hlk103247748">TenCate</a></td>
+ <td>Strip-lined with Beva 371 onto <a name="_Hlk103247748">TenCate</a></td>
  </tr>
 
  <tr>
@@ -145,15 +145,15 @@
  </tr>
 
  <tr>
- <td><em>Section Through a First-Rate</em>, After Thomas Phillips, 19th century</td>
+ <td><em>Section through a First-Rate</em>, after Thomas Phillips, 19th century</td>
  <td>BHC0872</td>
  <td>Royal Museums Greenwich, National Maritime Museum Collection</td>
  <td>1986</td>
- <td>Strip lined with Beva 371 film and sailcloth</td>
+ <td>Strip-lined with Beva film and sailcloth</td>
  </tr>
 
  <tr>
- <td><em>German Fleet Manoeuvres on High Seas</em>, Carl Saltzman, early 20th century</td>
+ <td><em>German Fleet Manoeuvres on High Seas</em>, Carl Saltzmann, early 20th century</td>
  <td>BHC0648</td>
  <td>Royal Museums Greenwich, National Maritime Museum Collection</td>
  <td>1992</td>
