--- a/content/_assets/images/tables/table-11-1.html
+++ b/content/_assets/images/tables/table-11-1.html
@@ -1,7 +1,7 @@
 <table>
 <caption>
   <strong>Table 11.1</strong><br />
-  <strong>Tensile test performed on different adhesives used to join strips of canvas 1-inch wide</strong>
+  <strong>Tensile test performed on different adhesives used to join strips of canvas 1 inch wide</strong>
 </caption>
 <thead>
   <tr>
@@ -52,5 +52,5 @@
 </tbody>
 </table>
 <div class="table-key">
-  <p><em>Source:</em> {Orata 2009}. Used with permission.</p>
+  <p>Source: Orata 2009. Used with permission.</p>
 </div>
