--- a/content/_assets/images/tables/table-11-2.html
+++ b/content/_assets/images/tables/table-11-2.html
@@ -97,5 +97,5 @@
   <p>Notes:<br />
   Adhesion by vacuum bag (700 mbar) and constant heat for 10 min at different temperatures.<br />
   W = Weak, S = Sufficient, G = Good, E = Excellent<br />
-  Source: (Orata and Capellaro 2013). Used with permission.</p>
+  Source: Orata and Capellaro 2013. Used with permission.</p>
 </div>
