--- a/content/_assets/images/tables/table-17-2.html
+++ b/content/_assets/images/tables/table-17-2.html
@@ -1,13 +1,13 @@
 <table>
 <caption>
   <strong>Table 17.2</strong><br />
-  <strong>Wax and resin ingredients confirmed with GC/MSD to be present in the six case study paintings and recreated lining recipes</strong>
+  <strong>Wax and resin ingredients confirmed with GC/MSD to be present in the six case study paintings and re-created lining recipes</strong>
 </caption>
 <thead>
   <tr>
     <th>Ingredient</th>
     <th>Compounds in waxes/resins detected with GC/MSD</th>
-    <th>Retention time (minutes) </th>
+    <th>Retention time (min.) </th>
     <th>Ions (m/z)</th>
   </tr>
 </thead>
@@ -22,7 +22,7 @@
  </tr>
 
  <tr>
- <td>Multiwax W-445s</td>
+ <td>Multiwax W-445</td>
  <td>Odd- and even-numbered hydrocarbons (peak at C<sub>33</sub>H<sub>68 </sub>or C<sub>34</sub>H<sub>70</sub>)</td>
  <td>28–29</td>
  <td>71</td>
@@ -53,5 +53,5 @@
  </tbody>
 </table>
 <div class="table-key">
-  <p><em>Note:</em> Each ingredient is identified by the presence of specific compounds at a particular molecular weight (m/z). GC/MSD seemed to have difficulty detecting microcrystalline wax (particularly when beeswax was present in the recipe) as well as the proprietary resins Zonarez B-85 and Piccolyte S-85 (not listed in table).</p>
+  <p>Note: Each ingredient is identified by the presence of specific compounds at a particular molecular weight (m/z). GC/MSD seemed to have difficulty detecting microcrystalline wax (particularly when beeswax was present in the recipe) as well as the proprietary resins Zonarez B-85 and Piccolyte S-85 (not listed in table).</p>
 </div>
