--- a/content/_assets/images/tables/table-17-3.html
+++ b/content/_assets/images/tables/table-17-3.html
@@ -1,7 +1,7 @@
 <table>
 <caption>
   <strong>Table 17.3</strong><br />
-  <strong>Resin ingredients confirmed with Py-GC/MSD to be present in three of the case study paintings and three recreated lining recipes</strong>
+  <strong>Resin ingredients confirmed with Py-GC/MSD to be present in three of the case study paintings and three re-created lining recipes</strong>
 </caption>
 <thead>
   <tr>
@@ -14,14 +14,14 @@
 <tbody>
 
  <tr>
- <td>Zonarez B-85S</td>
+ <td>Zonarez B-85</td>
  <td>Limonene monomer (C<sub>10</sub>H<sub>16</sub>), dimer (C<sub>20</sub>H<sub>32</sub>), and trimer (C<sub>30</sub>H<sub>48</sub>)</td>
  <td>3–10</td>
  <td>136, 272, 408</td>
  </tr>
 
  <tr>
- <td>Piccolyte S-85S</td>
+ <td>Piccolyte S-85</td>
  <td>Limonene monomer (C<sub>10</sub>H<sub>16</sub>), dimer (C<sub>20</sub>H<sub>32</sub>), and trimer (C<sub>30</sub>H<sub>48</sub>)</td>
  <td>3–10</td>
  <td>136, 272, 408</td>
@@ -31,6 +31,6 @@
 </table>
 
 <div class="table-key">
-  <p><em>Note:</em> Both Zonarez B-85 and Piccolyte S-85 were identified by the presence of the acid-catalyzed dimerization and trimerization of limonene.</p>
+  <p>Note: Both Zonarez B-85 and Piccolyte S-85 were identified by the presence of the acid-catalyzed dimerization and trimerization of limonene.</p>
 </div>
 
