Chapter 17 and 18 correx

--- a/content/_assets/images/tables/table-18-1.html
+++ b/content/_assets/images/tables/table-18-1.html
@@ -16,7 +16,7 @@
 <td rowspan="3">Basic components</td>
 <td>Skin glue</td>
 <td>Adhesive</td>
-<td>Rabbit, cartilage, technical gelatin. Trademarks: “glue of the Medalla” (extra strong glue D. Pedro Álvarez SA Chemical), “glue of Salamanca.”</td>
+<td>Rabbit, cartilage, technical gelatin. Trademarks: “glue of the Medalla” (extra strong glue D. Pedro Álvarez SA Chemical), “glue of Salamanca”</td>
 </tr>
 
 <tr>
@@ -41,7 +41,7 @@
 <tr>
 <td>Honey, molasses, sugar, syrup</td>
 <td>Plasticizer</td>
-<td>Honey, molasses, sugar, syrup or maple syrup (employed in the National Gallery of Denmark in the 1st half of the 20th century).</td>
+<td>Honey, molasses, sugar, syrup, or maple syrup (employed in the National Gallery of Denmark in first half of 20th century)</td>
 </tr>
 
 <tr>
@@ -59,7 +59,7 @@
 <tr>
 <td>Pigments</td>
 <td>Disinfectant</td>
-<td>Verdigris (Denmark in the 19th century)</td>
+<td>Verdigris (Denmark in 19th century)</td>
 </tr>
 
 <tr>
@@ -77,13 +77,13 @@
 <tr>
 <td>Gum</td>
 <td>Strengthen adhesiveness</td>
-<td><em>Grasilla,</em> (gum juniper: ground yellowish resin used for the preparation of varnishes, recipes from Spanish authors in the 16th century, recipes of Juan García de Miranda)</td>
+<td><em>Grasilla</em> (gum juniper: ground yellowish resin used for the preparation of varnishes, recipes from Spanish authors in the 16th century, recipes of Juan García de Miranda)</td>
 </tr>
 
 <tr>
-<td>Ox gall</td>
+<td>Oxgall</td>
 <td>Surfactant, wetting</td>
-<td>Ox gall (liquid or paste)</td>
+<td>Oxgall (liquid or paste)</td>
 </tr>
 
 </tbody>
