--- a/content/_assets/images/tables/table-21-2.html
+++ b/content/_assets/images/tables/table-21-2.html
@@ -12,7 +12,7 @@
       <li>Small risk of subtle change.</li>
       <li>Medium risk of flattening or stiffening the paint due to the use of solvents or temperature.</li>
       <li>High risk of visible flattening areas with impasto and changing paint properties permanently.</li>
-      <li>5. Very high risk of flat impasto or paint loss and permanent change of properties.</li>
+      <li>Very high risk of flat impasto or paint loss and permanent change of properties.</li>
     </ol>
   </td>
 </tr>
@@ -24,7 +24,7 @@
       <li>No change or slight effect of adhesives bonding to surface.</li>
       <li>Slight change due to adhesives penetrating the surface.</li>
       <li>Decrease in strength or changed response to RH due to impregnation.</li>
-      <li>Significant brittleness or weakness and/or change response to RH due to the effect of the adhesive, or risk of shrinkage.</li>
+      <li>Significant brittleness or weakness and/or change in response to RH due to the effect of the adhesive, or risk of shrinkage.</li>
       <li>Serious chemical and/or physical weakening and deformation of canvas due to impregnation with adhesive, or high risk of shrinkage.</li>
     </ol>
   </td>
@@ -87,9 +87,9 @@
     <p><strong>Visual change—due to impregnation and subsequent change of refraction index</strong></p>
     <ol>
       <li>No change.</li>
-      <li>ΔE &amp;lt; 1: Change cannot be seen with naked eye.</li>
+      <li>ΔE = below 1: Change cannot be seen with naked eye.</li>
       <li>ΔE = 1: Change is just noticeable.</li>
-      <li>ΔE &amp;gt; 1: Change is obvious but the artwork can still be enjoyed.</li>
+      <li>ΔE = more than 1: Change is obvious, but the artwork can still be enjoyed.</li>
       <li>Significant change and seriously compromised appreciation of the artwork.</li>
     </ol>
   </td>
