Chapter 26 and 27 correx

--- a/content/_assets/images/tables/table-27-2.html
+++ b/content/_assets/images/tables/table-27-2.html
@@ -1,7 +1,7 @@
 <table>
 <caption>
  <strong>Table 27.2</strong><br />
- <strong>Variations in storage modulus E' (stiffness) between 20% and 80% RH calculated using values at equilibration (end plateau)</strong>
+ <strong>Variations in storage modulus *E'* (stiffness) between 20% and 80% RH calculated using values at equilibration (end plateau)</strong>
 </caption>
 <thead>
   <tr>
@@ -31,7 +31,7 @@
 
  <tr>
  <td><strong>2</strong></td>
- <td>MC + CNC (heptane)</td>
+ <td>MC+CNC (heptane)</td>
  <td>8.3 ± 0.9</td>
  </tr>
 
