--- a/content/_assets/images/tables/table-27-3.html
+++ b/content/_assets/images/tables/table-27-3.html
@@ -1,7 +1,7 @@
 <table>
 <caption>
   <strong>Table 27.3</strong><br />
-  <strong>Summary of properties, advantages, and characteristics of the nanocellulose-based consolidants for canvas reinforcement as identified from the chemico-physico-mechanical studies carried out in the framework of the Nanorestart project.</strong>
+  <strong>Summary of properties, advantages, and characteristics of the nanocellulose-based consolidants for canvas reinforcement as identified from the chemico-physico-mechanical studies carried out in the framework of the Nanorestart project</strong>
 </caption>
 <thead>
   <tr>
@@ -17,7 +17,7 @@
   <td>
     <ul>
       <li>Powder (CNC) or paste form (CNF and CCNF); dispersions in water or water + ethanol (50:50)</li>
-      <li><strong>Mode of application</strong>: Spraying, brushing or blade coating</li>
+      <li><strong>Mode of application:</strong> Spraying, brushing, or blade coating</li>
       <li>Superficial treatment layer (“nanolining”)</li>
       <li><strong>Reinforcement</strong> provided at low weight added (3%)</li>
       <li>No color or gloss change on jute, linen, or cotton canvases</li>
@@ -26,7 +26,7 @@
   <td>
     <ul>
       <li>Aqueous and heptane-based solutions (viscous liquid at 2% w/w, gel)</li>
-      <li><strong>Mode of application</strong>: Brushing or blade coating, spraying (only for aqueous treatment highly diluted)</li>
+      <li><strong>Mode of application:</strong> Brushing or blade coating, spraying (only for aqueous treatment highly diluted)</li>
       <li><strong>Bulk penetration</strong> (aqueous treatment) and <strong>surface deposition </strong> (heptane treatment)</li>
       <li><strong>Better control </strong> over solvent penetration</li>
       <li><strong>Reinforcement</strong> provided at low weight added (2%) (lower than nanocellulose-only)</li>
@@ -35,9 +35,9 @@
   </td>
   <td>
     <ul>
-      <li>Aqueous or water +<sub></sub>ethanol (50:50) dispersions</li>
-      <li><strong>Mode of application</strong>: spraying (preferred) or brushing</li>
-      <li><strong>Bulk penetration </strong> if used at low concentration (&amp;lt;4.5% w/w)</li>
+      <li>Aqueous or water + ethanol (50:50) dispersions</li>
+      <li><strong>Mode of application:</strong> spraying (preferred) or brushing</li>
+      <li><strong>Bulk penetration </strong> if used at low concentration (<4.5% w/w)</li>
       <li><strong>Reinforcement</strong> provided at low weight added (8.6%); higher reinforcement but lower elongation at break and breaking force than CNF-treated sample when tested on a modern degraded cotton canvas</li>
     </ul>
   </td>
@@ -49,7 +49,7 @@
     <ul>
       <li>Amount of water introduced during treatment can be reduced by using highest possible concentration or spraying </li>
       <li>Brittle superficial layer</li>
-      <li><strong>Increased mechanical response</strong> to <strong>RH variations=</strong> after treatment <strong><em>except CNC treatment</em></strong></li>
+      <li><strong>Increased mechanical response</strong> to <strong>RH variations</strong> after treatment <strong><em>except CNC treatment</em></strong></li>
     </ul>
   </td>
   <td>
