--- a/content/_assets/images/tables/table-29-1.html
+++ b/content/_assets/images/tables/table-29-1.html
@@ -26,7 +26,7 @@
  </tr>
 
  <tr>
- <td>Sturgeon glue + Wheat starch paste (precooked)</td>
+ <td>Sturgeon glue + wheat = starch paste (precooked)</td>
  <td>Animal glue 20% + starch paste 13% in water (1:1)</td>
  </tr>
 
