--- a/content/_assets/images/tables/table-29-2.html
+++ b/content/_assets/images/tables/table-29-2.html
@@ -20,52 +20,52 @@
  <td>Lineco Neutral pH Adhesive (abbreviation: Lineco)</td>
  <td>Preservation Equipment Ltd.</td>
  <td>Declared as PVA, but FTIR shows EVA with high amount of vinyl acetate.<br/><br/>
-   Identical products: PEL Neutral pH Adhesive / Arcare J55 Neutral pH Adhesive.</td>
+   Identical products: PEL Neutral pH Adhesive / Arcare J55 Neutral pH Adhesive</td>
  </tr>
 
  <tr>
  <td>Mowilith DHS S1</td>
  <td>Celanese Emulsion GmbH</td>
- <td>Homopolymeric PVA dispersion.</td>
+ <td>Homopolymeric PVA dispersion</td>
  </tr>
 
  <tr>
  <td>Methocel A4C</td>
  <td>Dow Chemical Company</td>
- <td>Methyl cellulose ether.<br/><br/>
+ <td>Methyl cellulose ether<br/><br/>
    Alternative: Benecel A4C, Ashland Inc.</td>
  </tr>
 
  <tr>
  <td>Sturgeon glue</td>
  <td>Störleim Manufaktur</td>
- <td>Obtained from dried swim bladders according to {Flock 2014|, A.5.2} (see table 30.1).</td>
+ <td>Obtained from dried swim bladders according to Flock 2014, A.5.2, see table 29.1.</td>
  </tr>
 
  <tr>
  <td>Gaylord wheat starch (precooked)</td>
  <td>Gaylord Bros.</td>
- <td>Cold soluble due to preglottalization.<br/><br/>
-   Alternative: Precooked wheat paste No. 301, Talas.</td>
+ <td>Cold soluble due to pre-gelatinization<br/><br/>
+   Alternative: Precooked wheat paste No. 301, Talas</td>
  </tr>
 
  <tr>
  <td>Arbocel BWW 40</td>
- <td>Rettenmeier &amp;amp; Söhne GmbH &amp;amp; Co KG</td>
- <td>Same manufacturer for all other mentioned Arbocel types.</td>
+ <td>Rettenmeier & Söhne GmbH & Co KG</td>
+ <td>Same manufacturer for all other mentioned Arbocel types</td>
  </tr>
 
  <tr>
  <td>Beva 371 film (25 µm)</td>
  <td>CPC Conservator‘s Products Company</td>
- <td>Purchased via Deffner &amp;amp; Johann GmbH.</td>
+ <td>Purchased via Deffner & Johann GmbH</td>
  </tr>
 
  <tr>
  <td>Evacon-R</td>
  <td>Conservation by Design Unlimited</td>
- <td>Compare to updated company name Conservation by Design (CDX) International.<br/><br/>
-   FTIR shows EVA with high amount of ethylene.</td>
+ <td>Compare to updated company name Conservation by Design (CDX) International<br/><br/>
+   FTIR shows EVA with high amount of ethylene</td>
  </tr>
 
 </tbody>
@@ -88,7 +88,7 @@
  <tr>
  <td>Pattina L 13 puro lino (pure linen)</td>
  <td>Tessitura Enrico Sironi</td>
- <td>Weave structure analysis presented by {Flock 2020a|, 451}.</td>
+ <td>Weave structure analysis presented by Flock 2020a, 451</td>
  </tr>
 
  </tbody>
