--- a/content/_assets/images/tables/table-35-1.html
+++ b/content/_assets/images/tables/table-35-1.html
@@ -61,7 +61,7 @@
  </tr>
 
  <tr>
- <td>Strip lining</td>
+ <td>Strip-lining</td>
  <td></td>
  <td>1</td>
  <td></td>
@@ -100,5 +100,5 @@
 </table>
 
 <div class="table-key">
-  <p>a. One 17th century and one 19th century painting had both lining and reinforcing patches.</p>
+  <p>a. One 17th-century and one 19th-century painting had both lining and reinforcing patches.</p>
 </div>
