--- a/content/_assets/images/tables/table-35-3.html
+++ b/content/_assets/images/tables/table-35-3.html
@@ -1,7 +1,7 @@
 <table>
 <caption>
  <strong>Table 35.3</strong><br />
- <strong>Number of paintings that received the different types of structural interventions carried out in the past and in 2016–2017 by painting production date</strong>
+ <strong>Number of paintings that received the different types of structural interventions carried out in the past and in 2016–17 by painting production date</strong>
 </caption>
 <thead>
   <tr>
@@ -21,15 +21,15 @@
   <tr>
     <th></th>
     <th>Past</th>
-    <th>2016–2017</th>
+    <th>2016–17</th>
     <th>Past</th>
-    <th>2016–2017</th>
+    <th>2016–17</th>
     <th>Past</th>
-    <th>2016–2017</th>
+    <th>2016–17</th>
     <th>Past</th>
-    <th>2016–2017</th>
+    <th>2016–17</th>
     <th><strong>Past </strong></th>
-    <th><strong>2016–2017</strong></th>
+    <th><strong>2016–17</strong></th>
   </tr>
 </thead>
 <tbody>
@@ -239,9 +239,9 @@
 <div class="table-key">
   <p>a. For the purpose of this table, paintings consolidated from the back only are included in the “No structural intervention” category. </p>
 
-  <p>b. Some paintings simultaneously had strip-lining, reinforcing patches, and double-canvas applied. </p>
+  <p>b. Some paintings simultaneously had strip-lining, reinforcing patches, and double canvas applied. </p>
 
-  <p>c. One 17th century and one 19th century painting had both lining and patches. These paintings are not included in the totals for “Minor or no structural intervention.” </p>
+  <p>c. One 17th-century and one 19th-century painting had both lining and patches. These paintings are not included in the totals for “Minor or no structural intervention.” </p>
 
-  <p>d. Paintings whose past lining were kept during the 2016–2017 campaign and had no new structural intervention are included in the category “No structural intervention” in 2016–2017.</p>
+  <p>d. Paintings whose past lining were kept during the 2016–17 campaign and had no new structural intervention are included in the “No structural intervention” category in 2016–17.</p>
 </div>
