--- a/content/_assets/images/tables/table-40-1.html
+++ b/content/_assets/images/tables/table-40-1.html
@@ -6,7 +6,7 @@
 <thead>
   <tr>
     <th colspan="5">Treatment</th>
-    <th colspan="4">Results: visual appearance of crack in raking light
+    <th colspan="4">Results: Visual appearance of crack in raking light
     (time after treatment)</th>
   </tr>
   <tr>
@@ -34,7 +34,7 @@
  <td>Initially 1/2 height; in a few days, approached before-treatment height with more gradual slope; at 2 months, original steeper slope reappeared: crack profile narrowed + aperture opened</td>
  <td>Crack has the appearance of an untreated crack</td>
  <td>Crack has the appearance of an untreated crack; cupping height lower than in slack painting</td>
- <td>Fig. 41.7</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
@@ -46,7 +46,7 @@
  <td>Crack appeared flat; plate perimeter surfaced</td>
  <td>Same as 70 days after treatment</td>
  <td>NA—not keyed out</td>
- <td>Fig. 41.7</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
@@ -57,19 +57,19 @@
  <td>Crack appeared flat; plate perimeter surfaced</td>
  <td>Crack has slightly raised; surfacing still present</td>
  <td>NA—not keyed out</td>
- <td>Fig. 41.7</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
  <td rowspan="6"><strong>Strips</strong></td>
  <td>4</td>
  <td>—</td>
- <td>Stainless steel strips</td>
+ <td>Stainless-steel strips</td>
  <td>Beva 371 film</td>
  <td>Crack slightly raised</td>
  <td>Crack raised slightly higher; no surfacing</td>
  <td>Same as for slack painting</td>
- <td>Figs. 41.4, 41.6, 41.7</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
@@ -80,7 +80,7 @@
  <td>Crack slightly raised</td>
  <td>Crack still appears slightly raised; no surfacing</td>
  <td>Crack remains slightly raised; however, now with surfacing due to bending of strips; gradual slope</td>
- <td>Figs. 41.4, 41.7</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
@@ -91,7 +91,7 @@
  <td>Crack slightly to moderately raised; epoxy heat curing appears significant in stiffening compared to treatment 7</td>
  <td>Crack is moderately raised; no surfacing</td>
  <td>Crack appears moderately to fully raised; surfacing is present</td>
- <td>Fig. 41.7</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
@@ -102,7 +102,7 @@
  <td>Crack moderately raised</td>
  <td>Crack is moderately raised, height higher; no surfacing</td>
  <td>NA—not keyed out</td>
- <td>Fig. 41.4</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
@@ -113,7 +113,7 @@
  <td>Crack slightly raised; epoxy flowed intermittently into crack for greater height control, resulting in stitched appearance</td>
  <td>Crack moderately to fully raised; stitched appearance; no surfacing</td>
  <td>Cupping height is lower than in slack painting; stitched appearance; surfacing is present </td>
- <td>Figs. 41.6, 41.7</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
@@ -124,7 +124,7 @@
  <td>Initially 1/2 height; in a few days, approached before-treatment height with gradual slope; at 70 days, original steeper slope reappeared</td>
  <td>Crack has appearance of an untreated crack; no surfacing</td>
  <td>NA—not keyed out</td>
- <td>Fig. 41.7</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
@@ -136,7 +136,7 @@
  <td>Crack was slightly raised; slight moating in sized area</td>
  <td>Crack is slightly to moderately raised; strong moating, no surfacing</td>
  <td>Crack approaches appearance of untreated; keying out removed appearance of moating; surfacing present</td>
- <td>Figs. 41.6, 41.7</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
@@ -147,7 +147,7 @@
  <td>Crack appeared moderately raised; strong moating in sized area</td>
  <td>Crack is slightly to moderately raised; severe moating, no surfacing</td>
  <td>Crack approaches appearance of untreated; slight moating is visible; surfacing present</td>
- <td>Fig. 41.7</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
@@ -159,7 +159,7 @@
  <td>Crack appeared slightly to moderately raised; sized area was moderately moated</td>
  <td>Crack has appearance of untreated; slight moating is visible: no surfacing</td>
  <td>Cupping height is lower than in slack painting; moating not apparent; no surfacing</td>
- <td>Fig. 41.6</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
@@ -170,7 +170,7 @@
  <td>Crack appeared to be half of before-treatment height; sized area was severely moated</td>
  <td>Crack has appearance of untreated; strong moating is visible; no surfacing</td>
  <td>Cupping height is lower than in slack painting; moating is minimized; no surfacing</td>
- <td>Fig. 41.4</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  <tr>
@@ -182,7 +182,7 @@
  <td>Crack appeared moderately raised</td>
  <td>Crack appears moderately raised; no surfacing</td>
  <td>Crack appears moderately raised; no surfacing</td>
- <td>Figs. 41.6, 41.7</td>
+ <td>Fig. 40.7</td>
  </tr>
 
  </tbody>
