--- a/content/_assets/images/tables/table-49-1.html
+++ b/content/_assets/images/tables/table-49-1.html
@@ -1,7 +1,7 @@
 <table>
 <caption>
   <strong>Table 49.1</strong><br />
-  <strong>Weight increases for Single vs. Double Layer application trials</strong>
+  <strong>Weight increases for Single versus Double Layer Application trials</strong>
 </caption>
 <thead>
   <tr>
