--- a/content/_assets/images/tables/table-50-1.html
+++ b/content/_assets/images/tables/table-50-1.html
@@ -72,7 +72,7 @@
  <tr>
  <td><strong>F</strong></td>
  <td>Unbleached beeswax</td>
- <td>all</td>
+ <td>All</td>
  <td>—</td>
  <td>—</td>
  <td colspan="2">—</td>
