--- a/content/_assets/images/tables/table-51-1.html
+++ b/content/_assets/images/tables/table-51-1.html
@@ -12,8 +12,8 @@
   </tr>
 
   <tr>
-  <th colspan="2">10X</th>
-  <th colspan="4">25X</th>
+  <th colspan="2">10×</th>
+  <th colspan="4">25×</th>
   </tr>
 </thead>
 <tbody>
@@ -100,7 +100,7 @@
  </tr>
 
  <tr>
- <td>Rough-milled semiwhole rye. Type 70</td>
+ <td>Rough-milled semiwhole rye, Type 70</td>
  <td>Minoterie DOM</td>
  <td colspan="2">7</td>
  <td>—</td>
