--- a/content/_assets/images/tables/table-51-2.html
+++ b/content/_assets/images/tables/table-51-2.html
@@ -22,7 +22,7 @@
  <tr>
  <td rowspan="8">63010 Kremer</td>
  <td>Wheat Manitoba Type 55</td>
- <td rowspan="4">Open weave linen canvas: 9 × 9 threads/cm<sup>2</sup> (CTS 2297)</td>
+ <td rowspan="4">Open-weave linen canvas: 9 × 9 threads/cm<sup>2</sup> (CTS 2297)</td>
  <td rowspan="8">Primed linen canvas, titanium white/zinc oxide bound in oil as ground layer (Claessens, Belgium)</td>
  <td>WM-O-U</td>
  <td>WM-O-A</td>
@@ -48,7 +48,7 @@
 
  <tr>
  <td>Wheat Manitoba Type 55</td>
- <td rowspan="4">Close weave linen canvas: 15 × 15 threads/cm<sup>2</sup> (CTS 1111)</td>
+ <td rowspan="4">Close-weave linen canvas: 15 × 15 threads/cm<sup>2</sup> (CTS 1111)</td>
  <td>WM-C-U</td>
  <td>WM-C-A</td>
  </tr>
