--- a/content/_assets/images/tables/table-51-3.html
+++ b/content/_assets/images/tables/table-51-3.html
@@ -7,7 +7,7 @@
   <tr>
     <th colspan="2">Samples tested in weft direction</th>
     <th>Lining canvas</th>
-    <th>Average peel force (50-250 mm) (N/cm)</th>
+    <th>Average peel force (50–250 mm) (N/cm)</th>
     <th>Standard deviation (N/cm)</th>
     <th>Minimum force (N/cm)</th>
     <th>Maximum force (N/cm)</th>
