--- a/content/_assets/images/tables/table-56-1.html
+++ b/content/_assets/images/tables/table-56-1.html
@@ -175,5 +175,5 @@
 </table>
 
 <div class="table-key">
-  <p><em>Note:</em> FTIR was done by Cristina Carșote.</p>
+  <p>Note: FTIR was done by Cristina Carșote.</p>
 </div>
