--- a/content/_assets/images/tables/table-56-2.html
+++ b/content/_assets/images/tables/table-56-2.html
@@ -1,7 +1,7 @@
 <table>
 <caption>
   <strong>Table 56.2</strong><br />
-  <strong>Adhesive and consolidant formulas tested on double-sided painted banners and epitaphs dating from the eighteenth and nineteenth centuries</strong>
+  <strong>Adhesive and consolidant formulas tested on double-sided painted banners and epitaphs dating from the 18th and 19th centuries</strong>
 </caption>
 <thead>
   <tr>
@@ -10,8 +10,8 @@
     <th>Solvent 1/w for 100 g</th>
     <th>Solvent 2/w for 100 g</th>
     <th>Prewetting of the surface prior to application</th>
-    <th>Readhesion of loose paint flakes</th>
-    <th>Impregnation,stabilization of decohesive paint</th>
+    <th>Re-adhesion of loose paint flakes</th>
+    <th>Impregnation, stabilization of decohesive paint</th>
     <th>Electric conductivity</th>
   </tr>
 </thead>
@@ -132,7 +132,7 @@
 <tr>
 <td>Aquazol 500 + Celluforce NCC CNC*</td>
 <td>1:1 w/w</td>
-<td>Isopropanol40</td>
+<td>Isopropano l40</td>
 <td>DIWater 72</td>
 <td>Yes, DIW:IMS (1:1)</td>
 <td>✓</td>
