--- a/content/_assets/images/tables/table-56-3.html
+++ b/content/_assets/images/tables/table-56-3.html
@@ -42,14 +42,14 @@
 <td>1848<br />
 Poeni, Timiș county</td>
 <td>14 × 18</td>
-<td>Profiled (3 bulbs), painted red.</td>
+<td>Profiled (3 bulbs), painted red</td>
 </tr>
 
 <tr>
 <td><strong>3</strong></td>
 <td><strong>MBT</strong></td>
 <td>Pentecost, flanked by the 2 Archangels. Lappets: Saint Emperors Constantine and Helen; central lappet detached (Ascension of the Lord Jesus), Nativity of the Theotokos</td>
-<td>Coronation of the Virgin Mary with medallions of Saint Ap. Peter and Paul,2 floral ornaments, lappets: 3 Evanghelists,</td>
+<td>Coronation of the Virgin Mary with medallions of Saint Ap. Peter and Paul, 2 floral ornaments, lappets: 3 Evanghelists,</td>
 <td>144 × 107 cm</td>
 <td>3, oval; central lappet broken</td>
 <td>1876<br />
@@ -61,8 +61,8 @@ Poeni, Timiș county</td>
 <tr>
 <td><strong>4</strong></td>
 <td><strong>MBT</strong></td>
-<td>Coronation of the Virgin Mary, flanked by Archangels. Lappets: Seraph, St. M. George), St. M. Dimitrios, Seraph</td>
-<td>Theophany-Baptism of Jesus Christ, flanked by the Mother of God with Christ Child and St. Paraskeve of the Balkans, on the lappets: St. H. Nicholas of Myra, St. H. John Chrisostomos,(St. H. Basil the Great), St. H. Gregory Bogoslov.</td>
+<td>Coronation of the Virgin Mary, flanked by Archangels. Lappets: Seraph, St. M. George, St. M. Dimitrios, Seraph</td>
+<td>Theophany-Baptism of Jesus Christ, flanked by the Mother of God with Christ Child and St. Paraskeve of the Balkans, on the lappets: St. H. Nicholas of Myra, St. H. John Chrisostomos (St. H. Basil the Great), St. H. Gregory Bogoslov.</td>
 <td>142 × 108 cm</td>
 <td>4, not distinguishable; one lappet lost</td>
 <td>1812<br />
@@ -74,7 +74,7 @@ Poeni, Timiș county</td>
 <tr>
 <td><strong>5</strong></td>
 <td><strong>MBT</strong></td>
-<td>Saint Apostles Peter and Paul, 2 Seraphs, 2 Cherubs. Lappets: 3 Seraphs</td>
+<td>Apostles Peter and Paul, 2 Seraphs, 2 Cherubs. Lappets: 3 Seraphs</td>
 <td>Coronation of the Virgin Mary, 4 Seraphs, on the lappets: 3 Seraphs</td>
 <td>93 × 89 cm<br />
   Canvas: 75 cm</td>
@@ -82,13 +82,13 @@ Poeni, Timiș county</td>
 <td>1881<br />
 (Crivina de Sus, Timiș county)</td>
 <td>12 × 12</td>
-<td>Profiled, 3 bulbs.</td>
+<td>Profiled, 3 bulbs</td>
 </tr>
 
 <tr>
 <td><strong>6</strong></td>
 <td><strong>MBT</strong></td>
-<td>Mother of God flanked by 4 seraphs.Lappets: 3 seraphim;</td>
+<td>Mother of God flanked by 4 seraphs.Lappets: 3 seraphim</td>
 <td>Nativity of the Virgin Mary, flanked by 4 seraphs</td>
 <td>90 × 90 cm<br />
 Canvas: 77 cm</td>
@@ -102,7 +102,7 @@ Crivina de Sus, /Timiș</td>
 <tr>
 <td><strong>7</strong></td>
 <td><strong>MBT</strong></td>
-<td>Theophany-Baptism of Jesus Christ. Left: Virgin Mary with Christ Child. Right: St. Paraskeve of the Balkans. Lappets: St. Apostle Paul, St. Gregory Bogoslov,(St. Basil the Great), St. John Chrisostomos</td>
+<td>Theophany-Baptism of Jesus Christ. Left: Virgin Mary with Christ Child. Right: St. Paraskeve of the Balkans. Lappets: St. Apostle Paul, St. Gregory Bogoslov (St. Basil the Great), St. John Chrisostomos</td>
 <td>Coronation of the Theotokos, flanked by 2 archangels</td>
 <td>137 × 107 cm</td>
 <td>4, rectangular shape lappets; 1 missing</td>
@@ -179,7 +179,7 @@ Zolt, Timiș county</td>
 <tr>
 <td><strong>14</strong></td>
 <td><strong>MBT</strong></td>
-<td><em>Epitaph</em></td>
+<td>Epitaph</td>
 <td>Burial of Jesus Christ</td>
 <td>75.5 × 62cm</td>
 <td>—</td>
@@ -191,7 +191,7 @@ Zolt, Timiș county</td>
 <tr>
 <td><strong>15</strong></td>
 <td><strong>MBT</strong></td>
-<td><em>Epitaph</em></td>
+<td>Epitaph</td>
 <td>Burial of Jesus Christ</td>
 <td>70.5 × 55.5 cm</td>
 <td>—</td>
@@ -203,7 +203,7 @@ Zolt, Timiș county</td>
 <tr>
 <td><strong>16</strong></td>
 <td><strong>MBT</strong></td>
-<td><em>Epitaph</em> with scenes and symbols from the cycle of the Passions of Christ</td>
+<td>Epitaph with scenes and symbols from the cycle of the Passions of Christ</td>
 <td>Burial of Jesus Christ</td>
 <td>120 × 87 cm</td>
 <td>—</td>
@@ -266,18 +266,18 @@ Zolt, Timiș county</td>
 <td>Theophany, The Baptism of Jesus Christ</td>
 <td>Saint M. Tryphon and St. Paraskeve of the Balkans</td>
 <td>108 × 85 cm</td>
-<td>7, triangular-shape</td>
+<td>7, triangular shape</td>
 <td>1848<br />
 Socu, Gorj county<br />
 Authors: George, Kostandin, Kostandin</td>
 <td>11 × 13</td>
-<td>Original shape of the wooden pole to which the textile is sawn around with a rope</td>
+<td>Original shape of the wooden pole to which the textile is sewn around with a rope</td>
 </tr>
 
 <tr>
 <td><strong>22</strong></td>
 <td><strong>MBT</strong></td>
-<td>Interstitial canvas from wooden church St Paraskeveof Curtea</td>
+<td>Interstitial canvas from wooden church St Paraskeve of Curtea</td>
 <td>Photographic detail from the scenes of the Parables of Jesus Christ.</td>
 <td>—</td>
 <td>—</td>
@@ -290,7 +290,7 @@ Curtea, Timiș county</td>
 <tr>
 <td><strong>22</strong></td>
 <td><strong>Private</strong></td>
-<td>Holy Trinity</td>
+<td>The Holy Trinity</td>
 <td>Nativity of Lord Jesus Christ</td>
 <td>—</td>
 <td>—</td>
@@ -315,7 +315,7 @@ Curtea, Timiș county</td>
 <td><strong>24</strong></td>
 <td><strong>MBT</strong></td>
 <td>The burial of Jesus Christ on the Great Friday (with cherubs)</td>
-<td>Saints Apostles Peter and Paul (with cherubs)</td>
+<td>Apostles Peter and Paul (with cherubs)</td>
 <td>—</td>
 <td>3 lappets; central lappet lost</td>
 <td>ca. 1882, Crivina de Sus, Timiș county</td>
@@ -327,7 +327,7 @@ Curtea, Timiș county</td>
 <td><strong>25</strong></td>
 <td><strong>MBT</strong></td>
 <td>Theotokos with Jesus Christ Child</td>
-<td>Holy Trinity</td>
+<td>The Holy Trinity</td>
 <td>79 × 56 cm<br />
   Canvas: 65 cm</td>
 <td>The pennant has the shape of a chalice; lappet missing</td>
@@ -339,5 +339,5 @@ Curtea, Timiș county</td>
 </tbody>
 </table>
 <div class="table-key">
-  <p>Abbreviations: MBT = Museum of the Orthodox Archdiocese of Timișoara, MArT= Timișoara Museum of Art, Private = private collection</p>
+  <p>Abbreviations: MBT = Museum of the Orthodox Archdiocese of Timișoara; MArT= Timișoara Museum of Art; Private = private collection. This table details the banners and epitaphs in the study shown in fig. 56.1.</p>
 </div>
