--- a/content/_assets/images/tables/table-59-1.html
+++ b/content/_assets/images/tables/table-59-1.html
@@ -1,7 +1,7 @@
 <table>
 <caption>
  <strong>Table 59.1</strong><br />
- <strong>Variables of the tension of the different threads by means of several types of magnets</strong>
+ <strong>Variables of the tension of different threads by means of several types of magnets</strong>
 </caption>
 <thead>
   <tr>
