--- a/content/_assets/images/tables/table-62-1.html
+++ b/content/_assets/images/tables/table-62-1.html
@@ -35,23 +35,23 @@
  <td>20</td>
  <td>Linen</td>
  <td>32</td>
- <td>Half-basket<br />(1 × 2)</td>
+ <td>Half basket<br />(1 × 2)</td>
  <td>36.4</td>
  </tr>
 
  <tr>
- <td>Acrylic-PVA</td>
+ <td>Acrylic-PVAc</td>
  <td>11.3</td>
  <td>Chalk</td>
  <td>9.6</td>
  <td>PET</td>
  <td>5.7</td>
- <td rowspan="5">Full-basket<br />(2 × 2)</td>
+ <td rowspan="5">Full basket<br />(2 × 2)</td>
  <td rowspan="5">5.4</td>
  </tr>
 
  <tr>
- <td>Acrylic-PVA-styrene</td>
+ <td>Acrylic-PVAc-styrene</td>
  <td>9.4</td>
  <td>Chalk, TiO<sub>2</sub>, barium sulfate (BaSO<sub>4</sub>)</td>
  <td>3.6</td>
@@ -60,7 +60,7 @@
  </tr>
 
  <tr>
- <td>PVA</td>
+ <td>PVAc</td>
  <td>7.5</td>
  <td>Gypsum</td>
  <td>3.6</td>
@@ -74,7 +74,7 @@
  </tr>
 
  <tr>
- <td>PVA-styrene</td>
+ <td>PVAc-styrene</td>
  <td>2.0</td>
  <td>Other</td>
  <td>15.9</td>
