--- a/content/_assets/images/tables/table-62-2.html
+++ b/content/_assets/images/tables/table-62-2.html
@@ -22,9 +22,9 @@
  <td>107</td>
  <td>
   <em>p</em>(BA-sty)<br />
-  (20:80))<br />
-  (40:60))<br />
-  (60:40))<br />
+  (20:80)<br />
+  (40:60)<br />
+  (60:40)<br />
   (80:20)
  </td>
  <td>
@@ -61,5 +61,5 @@
 </table>
 
 <div class="table-key">
-  <p><em>Source: </em>[[Penzel, Rieger, and Schneider 1997]]</p>
+  <p>Source: Penzel, Rieger, and Schneider 1997</p>
 </div>
